<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.narim.nova.SignIn"
    android:background="@color/lightgrey">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/Image_SignIn_Logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/TextView_SignIn_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20dp"
        android:text="@string/SignIn_LogIn"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:fontFamily="@font/nova1"/>


    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_SignIn_LogIn"
        android:hint="@string/SignIn_UsernameHint"
        android:id="@+id/EditText_SignIn_Email"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/EditText_SignIn_Password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_SignIn_Email"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/SignIn_PasswordHint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:layout_centerHorizontal="true"/>




    <android.support.v7.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_SignIn_Password"
        android:layout_marginTop="25dp"
        android:id="@+id/Button_SignIn_Confirm"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button"
        android:text="@string/SignIn_Confirm"
        android:textSize="18dp"
        />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_SignIn_Password"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="140dp"
        android:textColor="@android:color/white"
        android:id="@+id/Button_SignIn_ForgotPassword"
        android:background="@drawable/button"
        android:text="@string/SignIn_ForgotPassword"
        android:textSize="18dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="440dp"></LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Button_SignIn_SignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@+id/Button_SignIn_ForgotPassword"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="230dp"
        android:background="@drawable/button"
        android:text="@string/SignIn_SignUp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/TextView_SignIn_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_SignIn_ForgotPassword"
        android:layout_marginTop="70dp"
        android:text="@string/SignIn_DontHaveAccount"
        android:layout_marginLeft="10dp"

        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />





</RelativeLayout>