<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/lightgrey">

    <TextView
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:id="@+id/Image_ForgotPassword_Back"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:text="@string/Back"
        android:layout_marginTop="15dp"
        android:background="@color/lightgrey"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:fontFamily="@font/fallingskybd" />


    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/Image_ForgetPassword_Logo"
        android:layout_below="@id/Image_ForgotPassword_Back"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/TextView_ForgotPassword_Forgot"
        android:layout_below="@id/Image_ForgetPassword_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/ForgotPassword_Forgot"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:fontFamily="@font/nova1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_ForgotPassword_Forgot"
        android:hint="@string/ForgotPassword_EmailHint"
        android:id="@+id/EditText_ForgotPassword_Email"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_ForgotPassword_Email"
        android:layout_marginTop="25dp"
        android:id="@+id/Button_ForgotPassword_Confirm"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/ForgotPassword_Confirm"
        android:textSize="18dp"
        android:textColor="@color/white"
        />
</RelativeLayout>