<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"

    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/relative_layout"
        >


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_NavDrawer_profilepic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/profilepicture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/image_NavDrawer_profilepic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:hint="Name"
            android:fontFamily="@font/fallingskybd"
            android:textSize="25dp"
            android:textColorHint="@color/black"
            android:id="@+id/TextView_NavDrawer_Name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textColor="@color/black"
            android:layout_below="@+id/TextView_NavDrawer_Name"
            android:fontFamily="@font/fallingsky"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColorHint="@color/black"
            android:id="@+id/TextView_NavDrawer_UserName"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative_layout"
        android:background="@color/lightgrey"
        >

        <TextView
            android:id="@+id/Textview_NavDrawer_Profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fallingsky"
            android:text="Profile"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/Textview_NavDrawer_Following"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Textview_NavDrawer_Profile"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Profile_Following"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/Textview_NavDrawer_Followers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Textview_NavDrawer_Following"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Followers"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/Textview_NavDrawer_EditProfile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Textview_NavDrawer_Followers"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Profile_EditProfile"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp" />


    </RelativeLayout>



</RelativeLayout>