<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage"
    android:background="@color/lightgrey"
    >

    <RelativeLayout
        android:id="@+id/RelativeLayout_Profile_First"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fallingskybd"
            android:id="@+id/TextView_Profile_Title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightgrey"
            android:text="@string/Back"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/fallingskybd"
            android:id="@+id/Textview_Profile_Back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightgrey"
            android:text="SignOut"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/fallingskybd"
            android:id="@+id/Textview_Profile_SignOut"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_Profile_Photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/profilepicture" />

        <TextView
            android:id="@+id/TextView_Profile_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_Profile_Photo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fallingskybd"
            android:text="Ahmed Ashraf"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/TextView_Profile_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView_Profile_Name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fallingsky"
            android:text="AhmedAshraf"
            android:textColor="@color/black"
            android:textSize="15dp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Button_Profile_EditProfile"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@+id/Button_SignIn_Confirm"
            android:layout_alignParentRight="true"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonwhite"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Profile_EditProfile"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Button_Profile_Following"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@+id/Button_Profile_EditProfile"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonwhite"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Profile_Following"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Button_Profile_Followers"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@+id/Button_Profile_Following"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonwhite"
            android:fontFamily="@font/fallingsky"
            android:text="@string/Profile_Followers"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/TextView_Profile_UserName"
            android:layout_marginTop="10dp"
            android:background="@color/grey"></LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_Profile_Second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RelativeLayout_Profile_First">


        <android.support.design.widget.TabLayout
            android:id="@+id/TabLayout_Profile"
            android:layout_width="wrap_content"
            android:layout_height="50dp">
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/ViewPager_Profile"
            android:layout_width="match_parent"
            android:layout_below="@+id/TabLayout_Profile"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </RelativeLayout>
</RelativeLayout>